--- a/.htaccess
+++ b/.htaccess
@@ -1,5 +1,9 @@
 RewriteEngine on
-RewriteRule ^(.*)$ /web/$1 [QSA]
+
+#Redirect 301 / http://mt-example.com/
+
 
 RewriteCond %{HTTP_HOST} [NC]
 RewriteRule .* https://%{HTTP_HOST}%{REQUEST_URI} [L,R=301]
+
+RewriteRule ^(.*)$ /web/$1 [QSA]
