--- a/app/config/security.yml
+++ b/app/config/security.yml
@@ -39,6 +39,6 @@ security:
         - { path: ^/login$, role: IS_AUTHENTICATED_ANONYMOUSLY }
         - { path: ^/register, role: IS_AUTHENTICATED_ANONYMOUSLY }
         - { path: ^/resetting, role: IS_AUTHENTICATED_ANONYMOUSLY }
-        - { path: ^/expenses/*, role: ROLE_USER }
-        - { path: ^/onkosten/*, role: ROLE_USER }
         - { path: ^/admin/*, role: ROLE_ADMIN }
+        - { path: ^/api/getValidateTree, role: ROLE_ADMIN }
+        - { path: ^/*, role: ROLE_USER }
