--- a/app/config/security.yml
+++ b/app/config/security.yml
@@ -26,6 +26,14 @@ security:
 
             logout:
                 path: /logout
+            remember_me:
+                secret:   '%secret%'
+                lifetime: 604800 # 1 week in seconds
+                path:     /
+                # by default, the feature is enabled by checking a
+                # checkbox in the login form (see below), uncomment the
+                # following line to always enable it.
+                #always_remember_me: true
 
             # activate different ways to authenticate
 
