--- a/app/config/security.yml
+++ b/app/config/security.yml
@@ -28,7 +28,7 @@ security:
                 path: /logout
             remember_me:
                 secret:   '%secret%'
-                lifetime: 604800 # 1 week in seconds
+                lifetime: 31557600 # 1 year in seconds
                 path:     /
                 # by default, the feature is enabled by checking a
                 # checkbox in the login form (see below), uncomment the
